--- a/login page.html
+++ b/login page.html
@@ -63,6 +63,7 @@
     <div class="submit-container">
       <button type="submit">Login</button>
     </div>
+<p>Not signed yet?</p>
 </form>
     <button class="signup-button" type="button" onclick="location.href='signup.html'">Sign Up</button>
   </div>
